足跡機能実装

--- a/app/assets/stylesheets/blocks/report/_report_checks.sass
+++ b/app/assets/stylesheets/blocks/report/_report_checks.sass
@@ -1,21 +1,21 @@
-.report-checks
+.footprints
   display: flex
 
-.report-checks__title
+.footprints__title
   +text-block(.875rem 2rem, 600 right)
   flex: 0 0 4.75rem
   padding-right: 1rem
 
-.report-checks__items
+.footprints__items
   flex: 100
   display: flex
   +margin(horizontal, -.25rem)
 
-.report-checks-item
+.footprints-item
   display: flex
   align-items: center
   +margin(horizontal, .25rem)
 
-.report-checks-item__checker-icon
+.footprints-item__checker-icon
   +size(2rem)
   border-radius: 50%
