--- a/app/views/reports/_report_check.html.slim
+++ b/app/views/reports/_report_check.html.slim
@@ -1,3 +1,3 @@
-.report-checks-item
+li.footprints-item
   = link_to check.user, itempro: 'url' do
-    = gravatar_tag check.user, size: 32, html: { class: "report-checks-item__checker-icon" }
+    = gravatar_tag check.user, size: 32, html: { class: "footprints-item__checker-icon is-#{check.user.login_name}", alt: check.user.login_name }
