--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -18,7 +18,7 @@ header.page-header
           h2.practice-content__title= t('helpers.label.practice.description')
         .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           = @practice.description
-          
+
       .practice-content
         .practice-content__header
           h2.practice-content__title= t('helpers.label.practice.goal')
@@ -45,6 +45,11 @@ header.page-header
                 $.post('/chat_notices', {text: text});
                 console.log('it is test');
               });
+          - if @practice.is_completed?(current_user)
+            li.page-actions__item
+              = link_to practice_learning_path(@practice),method: :put, class: 'is-button-standard-md-info' do
+                i.fa.fa-check-circle
+                = t('complete')
 
     .col-md-6.col-xs-12
       // TODO 関連する質問を表示
