--- a/app/views/application/_pp.slim
+++ b/app/views/application/_pp.slim
@@ -23,4 +23,4 @@ p
 
 h3 個人情報の開示請求について
 p
-  | お客様には、貴殿の個人情報の利用目的の通知、開示、内容の訂正、追加又は削除、利用の停止、消去及び第三者への提供の停止を要求する権利があります。
+  | 貴殿の個人情報の利用目的の通知、開示、内容の訂正、追加又は削除、利用の停止、消去及び第三者への提供の停止を要求する権利があります。
