--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
@@ -2,6 +2,8 @@
   margin-bottom: 1.25rem
   &:last-child
     margin-bottom: 0
+  &.is-hidden
+    display: none
 
 .auth-form-item__twitter-input-container
   position: relative
