welcomeページを追加
ログインしててもトップページが見えるようにするため。

--- a/app/assets/stylesheets/blocks/main-visual/_main-visual.sass
+++ b/app/assets/stylesheets/blocks/main-visual/_main-visual.sass
@@ -14,7 +14,7 @@
   height: 100%
   +position(relative)
   +media-breakpoint-down(sm)
-    .home-index &.container
+    .home-welcome &.container
       +padding(horizontal, 0)
 
 .main-visual__main
