--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -11,7 +11,7 @@ body
   overflow-y: scroll
   .modal-open
     overflow: hidden
-  &.home-index
+  &.home-welcome
     background-color: $base-color
   &.has-background
     background-image: image_url('main-visual.jpg')
@@ -38,7 +38,7 @@ body
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
 
-.home-index
+.home-welcome
   .container
     max-width: 75rem
     +padding(horizontal, 1rem)
