--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,12 +1,9 @@
 doctype html
 html.is-application lang="ja"
   head
-    meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    meta content="width=device-width, initial-scale=1" name="viewport"
-    - page_title = yield :title
-    title #{page_title.present? ? page_title + ' - ' : ''}#{t('256interns')}
     = favicon_link_tag
+    = display_meta_tags default_meta_tags
     = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
