--- a/app/views/pages/edit.html.slim
+++ b/app/views/pages/edit.html.slim
@@ -1,7 +1,8 @@
+- title "ページ編集"
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title ページ編集
+      h2.page-header__title= title
 
 .page-body
   .container
