--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,9 +1,9 @@
-- title "ページ一覧"
+- title "Wiki"
 header.page-header
   .container
     .page-header__container
       h1.page-header__title
-        | WIKI
+        = title
       .page-header__action
         = link_to "/pages/new", class: 'is-button-standard-md-warning' do
           i.fa.fa-plus
