--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -16,6 +16,8 @@ header.page-header
       .practice-content
         header.practice-content__header
           h2.practice-content__title= t('helpers.label.practice.description')
+          = render "practices/status_stamp", practice: @practice
+        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           - unless @practice.not_completed?(current_user)
             .completed_stamp
               .completed_stamp__content.is-title
