プラクティスに課題を付けるチェックボタンを実装

--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -31,6 +31,12 @@
           .a-label
             | プレビュー
           #js-goal-preview.is-long-text-style.markdown-form__preview
+    .form-item
+      .row
+        .col-md-6.col-xs-12
+          = f.label :assignment do
+            = f.check_box :assignment, {}, true
+            | このプラクティスに課題を付けます。
   .form-actions
     ul.form-actions__items
       li.form-actions__item
