--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -56,13 +56,14 @@ nav.global-nav.js-show-mobile-nav__target
             .global-nav-links__link-label
               = t('categories')
         li.global-nav-links__item
-          = link_to admin_task_requests_path(passed: false), class: "global-nav-links__link #{current_link('/admin/task_requests')}" do
+          = link_to admin_submissions_path(passed: false), class: "global-nav-links__link #{current_link('/admin/submissions')}" do
             .global-nav-links__link-icon
-              - if TaskRequest.non_passed.exists?
-                .global-nav-task_requests-count
-                  = TaskRequest.non_passed.count
+              - if Submission.non_passed.exists?
+                .global-nav-submissions-count
+                  = Submission.non_passed.count
               i.fa.fa-check-square
             .global-nav-links__link-label
+              = t('submissions')
               = t('task_requests')
 nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
   .global-nav__inner
