--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -29,6 +29,5 @@ html.is-admin lang="ja"
       - if @reports.present?
         .recent-reports
           .recent-reports__items
-            - @reports.each do |report|
-              = render 'reports/recent_reports', report: report
+            = render partial: "reports/recent_report", collection: @reports, as: "report"
     = render('to_top')
