recent_reportsにハンコを追加

--- a/app/assets/stylesheets/blocks/report/_stamp.sass
+++ b/app/assets/stylesheets/blocks/report/_stamp.sass
@@ -19,3 +19,18 @@
   &.is-created-at
     +size(100% 36%)
     +border(vertical, solid .0625rem $stamp-color)
+
+.stamp-small
+  border: double .1875rem $stamp-color
+  border-radius: .20rem
+  +size(3rem 1.3rem)
+  color: $stamp-color
+  font-size: .5%
+  font-weight: bold
+  font-style: normal
+  +position(absolute, right 3%)
+  &.stamp__content
+    display: flex
+    align-items: center
+    justify-content: center
+    +size(100% 32%)
