--- a/app/views/reports/_recent_reports.slim
+++ b/app/views/reports/_recent_reports.slim
@@ -3,5 +3,9 @@
     = gravatar_tag report.user, size: 88, html: { class: "recent-reports-item__user-icon" }
     h3.recent-reports-item__title
       = report.title
+      - if report.checks.present?
+        i.stamp-small
+          .stamp__content
+            | 確認済
     time.recent-reports-item__date
       = l report.updated_at, format: :date_default
