デザイン修正

--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -18,6 +18,8 @@ body
     background-size: cover
     background-position: center center
     background-attachment: fixed
+  &.is-mobile-nav-active
+    overflow: hidden
 
 .container
   max-width: 100%
