--- a/app/assets/stylesheets/blocks/practice/_categories.sass
+++ b/app/assets/stylesheets/blocks/practice/_categories.sass
@@ -16,6 +16,8 @@
 
 .categories-item__title
   +text-block(1.5rem 1.45, $side)
+  +media-breakpoint-down(sm)
+    font-size: 1.25rem
 
 .categories-item__show-handle
   +size(2rem)
