--- a/app/assets/stylesheets/blocks/report/_report_checks.sass
+++ b/app/assets/stylesheets/blocks/report/_report_checks.sass
@@ -5,6 +5,8 @@
   +text-block(.875rem 2rem, 600 right)
   flex: 0 0 4.75rem
   padding-right: 1rem
+  +media-breakpoint-down(sm)
+    flex: 0 0 auto
 
 .footprints__items
   flex: 100
