--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -1,14 +1,31 @@
 $global-nav-width: 5rem
 
 .global-nav
+  display: inline
+  +media-breakpoint-down(sm)
+    display: block
+    +position(fixed, left 0, top 0, bottom 0, 100)
+    background-color: rgba(black, .4)
+    width: 0
+    overflow: hidden
+    &.is-active
+      width: 100%
+      right: 0
+
+.global-nav__inner
   background-color: $side
   +size($global-nav-width 100%)
   +position(fixed, left 0, top 0, bottom 0, 2)
   +media-breakpoint-down(sm)
-    width: 12rem
-    display: none
-    &.is-active
-      display: block
+    width: 0
+    transition: width .2s ease-in
+    overflow: hidden
+    left: -12rem
+    .global-nav.is-active &
+      width: 12rem
+      left: 0
+      >*
+        width: 12rem
 
 .global-nav-current-user
   +padding(vertical, .75rem)
