--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -5,9 +5,16 @@
   +text-block(.625rem 1.45, center $reversal-text 600)
   margin-right: .5rem
   border-radius: .25rem
+  &.is-header
+    margin-left: .5rem
+    margin-right: 0
   &.is-working_week
     background-color: $accent-color
     color: $default-text
+  &.is-adviser
+    background-color: #3976c3
+  &.is-graduate
+    background-color: #409c73
 
 .user-data
   padding: 1rem
