--- a/app/views/users/_users_local_nav.slim
+++ b/app/views/users/_users_local_nav.slim
@@ -9,7 +9,8 @@ nav.tab-nav
         = link_to t('working_week'), users_path(target: 'working'), class: "tab-nav__item-link #{@target == 'working' ? 'is-active': ''}"
       li.tab-nav__item
         = link_to t('graduate'), users_path(target: 'graduate'), class: "tab-nav__item-link #{@target == 'graduate' ? 'is-active': ''}"
-      li.tab-nav__item
-        = link_to "リタイア", users_path(target: 'retire'), class: "tab-nav__item-link #{@target == 'retire' ? 'is-active': ''}"
+      - if current_user && current_user.admin?
+        li.tab-nav__item
+          = link_to "リタイア", users_path(target: 'retire'), class: "tab-nav__item-link #{@target == 'retire' ? 'is-active': ''}"
       li.tab-nav__item
         = link_to t('adviser'), users_path(target: 'adviser'), class: "tab-nav__item-link #{@target == 'adviser' ? 'is-active': ''}"
