--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -75,10 +75,11 @@ $header-height: 3.125rem
 
 .header-show-mobile-nav
   display: none
+  cursor: pointer
+  height: 100%
+  justify-content: center
+  align-items: center
+  width: 3rem
+  margin-right: -1rem
   +media-breakpoint-down(sm)
     display: flex
-    height: 100%
-    justify-content: center
-    align-items: center
-    width: 3rem
-    margin-right: -1rem
