--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -12,6 +12,7 @@
   padding: .5rem .75rem
   border-bottom: solid .0625rem $side-border
   transition: color .2s ease-in, background-color .2s ease-in
+  +position(relative)
   &:hover
     background-color: $side-shade
 
@@ -27,3 +28,9 @@
   border-radius: 50%
   float: left
   margin-right: .75rem
+
+.recent-reports-item__checked
+  color: $accent-color
+  +position(absolute, left .25rem, top .25rem)
+  font-size: 1.5rem
+  text-shadow: $main-color .0625rem .0625rem 0
