--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -1,22 +1,27 @@
 .is-long-text-style
+  font-size: 1rem
   +media-breakpoint-down(sm)
+    font-size: .8125rem
     word-break: break-all
   h1
-    +text-block(1.6em 1.4 .6em)
-    +media-breakpoint-down(sm)
-      +text-block(1.25em 1.4 .6em)
+    color: transparent
+    &::before
+      +text-block(1em 1.45 .5em, $reversal-text block)
+      content: "要修正: 本文中の見出しは h1（#）は使わず h2（##）から始めてください"
+      background-color: red
+      padding: .25rem .5rem
   h2
-    +text-block(1.4em 1.4 .6em)
-    +media-breakpoint-down(sm)
-      +text-block(1.125em 1.4 .6em)
+    +text-block(1.8em 1.4 .6em)
   h3
+    +text-block(1.6em 1.4 .6em)
+  h4
+    +text-block(1.4em 1.4 .6em)
+  h5
     +text-block(1.2em 1.4 .6em)
-    +media-breakpoint-down(sm)
-      +text-block(1em 1.4 .6em)
+  h6
+    +text-block(1em 1.4 .6em)
   p
-    +text-block(1rem 1.8 1.4em)
-    +media-breakpoint-down(sm)
-      +text-block(.875rem 1.8 1em)
+    +text-block(1em 1.8 1.4em)
   a
     +default-link
     +hover-link-reversal
@@ -32,21 +37,30 @@
     display: block
     +margin(horizontal, auto)
     margin-bottom: 1.4em
-  ul
+  ul,
+  ol
     margin-bottom: 1.8em
     margin-left: 1.6em
-    list-style: disc outside
-  li
-    +text-block(.9375rem 1.6 .8em)
     +media-breakpoint-down(sm)
-      +text-block(.875rem 1.6 .6em)
+      margin-bottom: 1.2em
+  ul
+    list-style: disc outside
+  ol
+    list-style: decimal outside
+  li
+    +text-block(1em 1.6 .8em)
+    ol,
+    ul
+      margin-top: 1.2em
+    input
+      margin-right: .5em
   pre
     margin-bottom: 2rem
     code
-      +text-block(.8125rem 1.6)
+      +text-block(.9em 1.6)
   p
     code
-      +text-block(.8125rem 1.6)
+      +text-block(.8em 1.6)
       padding: .125rem .25rem
       border: solid .0625rem #d9d9d9
       background-color: #f8f8f8
@@ -62,5 +76,8 @@
     margin-bottom: 2rem
     display: block
     max-width: 100%
+  img
+    border: solid .0625rem #eee
+    margin-bottom: 2rem
   *:last-child
     margin-bottom: 0
