--- a/app/views/admin/submissions/confirmations/show.html.slim
+++ b/app/views/admin/submissions/confirmations/show.html.slim
@@ -1,4 +1,4 @@
-- title t('interns')
+- title t('submission')
 header.page-header
   .container
     .page-header__container
@@ -9,16 +9,7 @@ header.page-header
     .admin-table
       .practice-submission-container
         .practice-submission
-          .practice-submission__author
-            = link_to @submission.user, itempro: 'url', class: 'practice-submission__author-link' do
-              = gravatar_tag @submission.user, size: 200, html: { class: "practice-submission__author-icon" }
-          .practice-submission__body
-            header.practice-submission__body-header
-              h2.practice-submission__login-name
-                = link_to @submission.user, itempro: 'url', class: 'practice-submission__login-name-link' do
-                  = @submission.user.login_name
-              time.practice-submission__created-at(datetime='#{@submission.created_at.to_datetime}' pubdate='pubdate')
-                = l @submission.updated_at, format: :date_long_with_time
+          .practice-submission__body_non_tail
             h4.practice-submission__body-header
               = link_to @submission.practice.title, @submission.practice
             .practice-content
@@ -26,10 +17,10 @@ header.page-header
                 h2.practice-content__title= t('helpers.label.practice.goal')
               .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
                 = @submission.practice.goal
-            .practice-submissions__content.js-markdown-view.js-target-blank.is-long-text-style
-              = @submission.content
-            = render 'practices/requested_tasks', submission: @submission
-            .practice-submission-form__action
-              = link_to admin_submissions_confirmation_path(@submission), method: :put, class: 'is-button-standard-sm-info' do
-                i.fa.fa-check-circle
-                = t('complete')
+    .practice-submission-container
+      .practice-submission-form__action
+        = link_to admin_submissions_confirmation_path(@submission), method: :put, class: 'is-button-standard-sm-info' do
+          i.fa.fa-check-circle
+          = t('complete')
+    .practice-submissions__content.js-markdown-view.js-target-blank.is-long-text-style
+    = render "practices/submission", submission: @submission
