--- a/app/views/admin/submissions/reviews/_form.html.slim
+++ b/app/views/admin/submissions/reviews/_form.html.slim
@@ -1,4 +1,10 @@
-= form_for([submission, submission.reviews.build]) do |f|
-  = f.label :message
-  = f.text_field :message
-  = f.submit "送信", class: "btn btn-primary"
+= render 'application/errors', object: @review
+.report-comment-form
+  .report-comment__author
+    = gravatar_tag current_user, size: 200, html: { class: "report-comment__author-icon" }
+  = form_for (admin_submission_review_path(@submission,@review)), html: { class: 'report-comment-form__form' } do |f|
+    .form-items
+      .form-item
+        = f.text_area :message, required: true, class: 'a-textarea report-comment-form__textarea js-markdown-input'
+    .report-comment-form__action
+      = f.submit review_btn_text, class: 'is-button-standard-md-primary'
