--- a/app/views/admin/submissions/approvals/show.html.slim
+++ b/app/views/admin/submissions/approvals/show.html.slim
@@ -25,4 +25,32 @@ header.page-header
     .practice-submission-container
       h2.practice-submission-container__title
         = t('review_title')
-      = render @submission.reviews
+      - @submission.reviews do |review|
+        .practice-submissions
+          .practice-submission-container
+            .practice-submission
+              .practice-submission__author
+                = link_to review.user, itempro: 'url', class: 'practice-submission__author-link' do
+                  = gravatar_tag review.user, size: 200, html: { class: "practice-submission__author-icon" }
+              .practice-submission__body
+                header.practice-submission__body-header
+                  h2.practice-submission__login-name
+                    = link_to review.user, itempro: 'url', class: 'practice-submission__login-name-link' do
+                      = review.user.login_name
+                    time.practice-submission__created-at(datetime='#{review.created_at.to_datetime}' pubdate='pubdate')
+                      = l review.created_at, format: :date_long_with_time
+                    - if review.is_edited?
+                      time.practice-submission__created-at(datetime='#{review.updated_at.to_datetime}' pubdate='pubdate')
+                        = l review.updated_at, format: :date_long_with_time
+                        =< t("edited")
+                .practice-submissions__content.js-markdown-view.js-target-blank.is-long-text-style
+                  = review.message
+                - if review.user == current_user
+                  .practice-submission__actions
+                    ul.practice-submission__actions-items
+                      li.practice-submission__actions-item
+                        = link_to edit_review_path(review), class: 'practice-submission__actions-item-link' do
+                          i.fa.fa-pencil
+                      li.practice-submission__actions-item
+                        = link_to review_path(review), data: { confirm: t('are_you_sure') }, method: :delete, class: 'practice-submission__actions-item-link' do
+                          i.fa.fa-trash-o
