--- a/app/views/admin/submissions/completes/show.html.slim
+++ b/app/views/admin/submissions/completes/show.html.slim
@@ -9,16 +9,7 @@ header.page-header
     .admin-table
       .practice-submission-container
         .practice-submission
-          .practice-submission__author
-            = link_to @submission.user, itempro: 'url', class: 'practice-submission__author-link' do
-              = gravatar_tag @submission.user, size: 200, html: { class: "practice-submission__author-icon" }
-          .practice-submission__body
-            header.practice-submission__body-header
-              h2.practice-submission__login-name
-                = link_to @submission.user, itempro: 'url', class: 'practice-submission__login-name-link' do
-                  = @submission.user.login_name
-              time.practice-submission__created-at(datetime='#{@submission.created_at.to_datetime}' pubdate='pubdate')
-                = l @submission.updated_at, format: :date_long_with_time
+          .practice-submission__body_non_tail
             h4.practice-submission__body-header
               = link_to @submission.practice.title, @submission.practice
             .practice-content
@@ -26,6 +17,27 @@ header.page-header
                 h2.practice-content__title= t('helpers.label.practice.goal')
               .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
                 = @submission.practice.goal
-            .practice-submissions__content.js-markdown-view.js-target-blank.is-long-text-style
-              = @submission.content
-            = render 'practices/requested_tasks', submission: @submission
+    .practice-submission-container
+      = render "admin/submissions/completes/complete",submission: @submission
+      h2.practice-submission-container__title
+        = t('review_title')
+      - @submission.reviews.each do |review|
+        .practice-submissions
+          .practice-submission-container
+            .practice-submission
+              .practice-submission__author
+                = link_to review.user, itempro: 'url', class: 'practice-submission__author-link' do
+                  = gravatar_tag review.user, size: 200, html: { class: "practice-submission__author-icon" }
+              .practice-submission__body
+                header.practice-submission__body-header
+                  h2.practice-submission__login-name
+                    = link_to review.user, itempro: 'url', class: 'practice-submission__login-name-link' do
+                      = review.user.login_name
+                    time.practice-submission__created-at(datetime='#{review.created_at.to_datetime}' pubdate='pubdate')
+                      = l review.created_at, format: :date_long_with_time
+                    - if review.is_edited?
+                      time.practice-submission__created-at(datetime='#{review.updated_at.to_datetime}' pubdate='pubdate')
+                        = l review.updated_at, format: :date_long_with_time
+                        =< t("edited")
+                .practice-submissions__content.js-markdown-view.js-target-blank.is-long-text-style
+                  = review.message
