--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -44,3 +44,9 @@ body
   .container
     max-width: 75rem
     +padding(horizontal, 1rem)
+
+.party-emails
+  margin: auto
+  background-color: white
+  border: 1px solid gray
+  padding: 10px
