oulu update、デザイン調整

--- a/app/assets/stylesheets/blocks/form/_markdown-form.sass
+++ b/app/assets/stylesheets/blocks/form/_markdown-form.sass
@@ -5,9 +5,10 @@
 
 .markdown-form__preview
   background-color: $base-color
-  padding: .5rem
+  padding: 1rem
   +text-block(.875rem 1.8 1.4em)
   border-radius: .25rem
   min-height: 22rem
   +media-breakpoint-down(sm)
+    padding: .5rem
     margin-bottom: 1rem
