--- a/app/assets/stylesheets/blocks/user/_user-profile.sass
+++ b/app/assets/stylesheets/blocks/user/_user-profile.sass
@@ -17,7 +17,8 @@
     border-radius: .25rem
 
 .user-profile__login-name
-  +text-block(1.5rem 1.45, 600 $main-color)
+  +text-block(1.5rem 1.2 .125rem, 600 $main-color)
+  +word-wrap
 
 .user-profile__full-name
   +text-block(.875rem 1.45, 400)
