--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,5 +1,5 @@
 $main-color: #2c2461
-$accent-color: #e4b125
+$accent-color: #ffbe0a
 $base-color: white
 $background-color: #e6e6e6
 $background-color-shade: #cbcbcb
