--- a/app/assets/stylesheets/blocks/entry/_entry-header.sass
+++ b/app/assets/stylesheets/blocks/entry/_entry-header.sass
@@ -8,12 +8,12 @@
     margin-bottom: 1rem
 
 .entry-header__title
-  +text-block(1.25rem 1.3 .5rem, $side)
+  +text-block(1.8rem 1.3 .25rem, 700)
   +media-breakpoint-down(sm)
     font-size: 1.25rem
 
 .entry-header__title-link
-  color: $side
+  color: $default-text
   display: block
 
 .entry-header__meta-items
