--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -19,7 +19,7 @@ header.header
               = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input', placeholder: t('search_report')
               button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
                 i.fa.fa-search
-          li.header-links__item.js-drop-down
+          li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger
               .header-notification-icon
                 - if current_user.notifications.unreads.count > 0
