--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -105,3 +105,8 @@ $header-height: 3.125rem
   border-radius: 1rem
   +media-breakpoint-down(sm)
     font-size: .625rem
+
+.header-show-mobile-nav-items
+  display: none
+  +media-breakpoint-down(sm)
+    display: flex
