--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -34,5 +34,8 @@ header.header
           li.header-links__item
             = link_to logout_path, class: "header-links__link" do
               i.fa.fa-sign-out
-      .header-show-mobile-nav.js-show-mobile-nav
-        i.fa.fa-bars
+      .header-show-mobile-nav-items
+        .header-show-mobile-nav.js-show-mobile-nav
+          i.fa.fa-bars
+        .header-show-mobile-nav.js-show-mobile-nav
+          i.fa.fa-bars
